# DRL-robot-navigation

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  issue_template.md
TD3/: replay_buffer.py  replay_buffer2.py  test_velodyne_td3.py  train_velodyne_td3.py  velodyne_env.py  velodyne_td3.py
TD3/assets/: multi_robot_scenario.launch
TD3/pytorch_models/: description
TD3/results/: description
TD3/runs/: description
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/multi_robot_scenario/: CMakeLists.txt  package.xml
catkin_ws/src/multi_robot_scenario/launch/: 2boxes.world  4mwall.world  SquareWorld.world  SquareWorld2.world  TD3-2.world  TD3.world  another.world  another2.world  book2.world  box.world  box2.world  boxworld  cafetable.world  cardboard.world  corner.world  empty_world.launch  h_h.world  h_world.world  house_world.world  human.world  multi_robot_scenario.launch  narrowstripes.world  oneball.world  onebox.world  pioneer3dx.gazebo.launch  pioneer3dx.rviz  pioneer3dx.urdf.launch  pocket.world  storage.world  stripes.world  this.world  wall.world
catkin_ws/src/multi_robot_scenario/xacro/camera/: camera.xacro  cameraD.xacro
catkin_ws/src/multi_robot_scenario/xacro/kinect/: model.sdf
catkin_ws/src/multi_robot_scenario/xacro/laser/: hokuyo.xacro
catkin_ws/src/velodyne_simulator/: README.md  bitbucket-pipelines.yml  gazebo_upgrade.md
catkin_ws/src/velodyne_simulator/velodyne_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/velodyne_simulator/velodyne_gazebo_plugins/: CHANGELOG.rst  package.xml
catkin_ws/src/velodyne_simulator/velodyne_simulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
tests/: conftest.py  test_setup_validation.py
(+21 files in other folders)
